--- a/ymock-core/pom.xml
+++ b/ymock-core/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.yirendai.infra</groupId>
 		<artifactId>ymock</artifactId>
-		<version>0.0.3-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 	<artifactId>ymock-core</artifactId>
 	<name>ymock-core</name>
