--- a/ymock-demo/pom.xml
+++ b/ymock-demo/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.yirendai.infra</groupId>
     <artifactId>ymock</artifactId>
-    <version>0.0.3-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
   <artifactId>ymock-demo</artifactId>
   <name>ymock-demo</name>
