--- a/ymock-demo/ymock-demo-simple/pom.xml
+++ b/ymock-demo/ymock-demo-simple/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.yirendai.infra</groupId>
 		<artifactId>ymock-demo</artifactId>
-		<version>0.0.3-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 	<artifactId>ymock-demo-simple</artifactId>
 	<name>ymock-demo-simple</name>
@@ -60,7 +60,7 @@
 		<dependency>
 			<groupId>com.yirendai.infra</groupId>
 			<artifactId>ymock-core</artifactId>
-			<version>0.0.3-SNAPSHOT</version>
+			<version>1.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
